--- a/cv.html
+++ b/cv.html
@@ -44,7 +44,7 @@
       <div id="contactsup"></div>
       <header>
         <img
-          src="./pictures/banniere2.jpg"
+          src="./pictures/banniere.jpg"
           class="img-fluid banniere"
           alt="bannière du site"
         />
@@ -66,7 +66,6 @@
         <a href="#compsup">Compétences</a>
         <a href="#atoutssup">Atouts</a>
         <a href="#intersup">Centres d'intérêts</a>
-        <a href="#permsup">Permis</a>
       </div>
 
       <div class="row entete">
@@ -100,7 +99,7 @@
         </div>
       </div>
 
-      <p><a href="./pdf/cv.pdf">En version PDF</a></p>
+      <!-- <p><a href="./pdf/cv.pdf">En version PDF</a></p> -->
       <div id="exp" class="categories liste">
         <h1>Expérience</h1>
         <ul>
