add banner on cv.html and changing marging-top on cv's info.

--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
           <p>
             "Suivant actuellement la formation de développeur web JavaScript et
             React.Js de la Wild Code School de Lille, je suis disponible à
-            partir de Septembre pour un stage d'une durée de 2 à 4 mois."
+            partir de Septembre pour un stage d'une durée de 4 mois."
           </p>
         </div>
       </div>
