changing profil pic.

--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,7 @@
             href="https://www.linkedin.com/in/louis-allard-devweb/"
             title="Mon profil LikedIn"
             target="_blank"
-            ><img src="https://media.licdn.com/dms/image/C5603AQGj8yalFwrMzg/profile-displayphoto-shrink_200_200/0?e=1564012800&v=beta&t=y8rMFIXMA2Ti5Xhmy6VkWtnnWptG77jRcEZNZq2TXrk" class="photo" alt="Ma photo"
+            ><img src="pictures/moi.jpg" class="photo" alt="Ma photo"
           /></a>
         </div>
         <div class="col contactIntro">
