minor correctifs on footer.

--- a/cv.html
+++ b/cv.html
@@ -207,43 +207,32 @@
         </ul>
       </div>
 
-      <footer class="page-footer font-small allFooter">
-        <div class="footerContainer">
-          <div
-            class="row text-center d-flex justify-content-center pt-5 mb-3 footer"
-          >
-            <div class="col-md-6 offset-1 py-2">
-              <h6 class="text-uppercase font-weight-bold">
-                Développeur Web en formation, suivez l'évolution de mon
-                apprentissage à travers ce site portfolio
-              </h6>
-            </div>
-            <div class="col">
-              <a href="https://github.com/Louis-Allard" target="_blank">
-                <img src="pictures/github.ico" alt="mon github"
-              /></a>
-              <a
-                href="https://www.linkedin.com/in/louis-allard-devweb/"
-                target="_blank"
-                ><img
-                  class="likedin"
-                  src="./pictures/likedin.png"
-                  alt="mon LikedIn"
-              /></a>
-              <a href="mailto:la.devweb@yahoo.com" target="_blank"
-                ><img
-                  class="contact"
-                  src="./pictures/contact.png"
-                  alt="mon LikedIn"
-              /></a>
-            </div>
+        <!--Footer-->
+
+    <footer class="page-footer font-small allFooter">
+      <div class="footerContainer">
+        <div class="row text-center d-flex justify-content-center pt-5 mb-3 footer">
+          <div class="col-md-6 offset-1 py-2">
+            <h6 class="text-uppercase font-weight-bold">
+              Développeur Web en formation permanente. N'hésitez pas à me contacter pour parler de vos projets.
+            </h6>
           </div>
-          <hr class="rgba-white-light" style="margin: 0 10%;" />
+          <div class="col">
+            Contact => 
+            <a href="https://github.com/Louis-Allard?tab=repositories" target="_blank"><img src="pictures/github.ico"
+                alt="mon github" title="Mon GitHub" /></a>
+            <a href="https://www.linkedin.com/in/louis-allard-devweb/" target="_blank"><img class="likedin"
+                src="./pictures/likedin.png" alt="mon LikedIn" title="Mon LinkeDin" /></a>
+            <a href="mailto:la.devweb@yahoo.com" target="_blank"><img class="contact" src="./pictures/contact.png"
+                alt="mon Email" title="Email" /></a>
+          </div>
         </div>
-        <div class="footer-copyright text-center py-2">
-          © 2019 Copyright: Portfolio by Louis Allard
-        </div>
-      </footer>
+        <hr class="rgba-white-light" style="margin: 0 10%;" />
+      </div>
+      <div class="footer-copyright text-center py-2">
+        console.log('© 2019 Copyright: Portfolio by Louis Allard');
+      </div>
+    </footer>
       <div id="scrollUp">
         <a href="#top"><img src="./pictures/to_top.png" alt="Remonter"/></a>
       </div>
