changing hard skills title.

--- a/cv.html
+++ b/cv.html
@@ -151,7 +151,7 @@
       <div id="info" class="categories">
         <div id="compsup"></div>
 
-        <h1>Langages / Frameworks</h1>
+        <h1>Compétences techniques</h1>
 
         <div class="row langages">
           <figure class="text-hide">
