--- a/cv.html
+++ b/cv.html
@@ -6,195 +6,166 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 <link href="./css/globalCss.css" rel="stylesheet" type="text/css" />
 <meta charset="utf-8" />
-  </head>
+</head>
 
-  <body>
-    <div class="container col-md-10 span-1 col-11 span-1">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a href="./index.html" class="navbar-brand" href="./index.html"
-          >Louis Allard |</a
-        >
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./cv.html"
-                >Mon C.V <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <!-- <li class="nav-item">
+<body>
+  <div class="container col-md-10 span-1 col-11 span-1">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a href="./index.html" class="navbar-brand" href="./index.html">Louis Allard |</a>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="./cv.html">Mon C.V <span class="sr-only">(current)</span></a>
+          </li>
+          <!-- <li class="nav-item">
               <a class="nav-link" href="./blog.html">Blog</a>
             </li> -->
-          </ul>
-        </div>
-      </nav>
-      <div id="contactsup"></div>
-      <header>
-        <img
-          src="./pictures/banniere.jpg"
-          class="img-fluid banniere"
-          alt="bannière du site"
-        />
-      </header>
-
-      <!--Barre de Nav partie CV-->
-      <span id="openArrow"> </span>
-
-      <div id="mySidenav" class="sidenav">
-        <div id="closebtn">
-          &#x2716;
-        </div>
-
-        <a href="#contactsup">Contact</a>
-        <a href="#contactsup">Introduction</a>
-        <a href="#expsup">Expériences</a>
-        <a href="#formationSup">Formations</a>
-        <a href="#infosup">Informatique</a>
-        <a href="#compsup">Compétences</a>
-        <a href="#atoutssup">Atouts</a>
-        <a href="#intersup">Centres d'intérêts</a>
-      </div>
-
-      <div class="row entete">
-        <div class="col-3">
-          <a
-            href="https://www.linkedin.com/in/louis-allard-devweb/"
-            title="Mon profil LikedIn"
-            target="_blank"
-            ><img src="pictures/moi.jpg" class="photo" alt="Ma photo"
-          /></a>
-        </div>
-        <div class="col contactIntro">
-          <ul>
-            <li class="mail">
-              <strong>Email :</strong
-              ><a href="mailto:la.dewweb@yahoo.com">
-                la.dewweb@yahoo.com</a
-              >
-            </li>
-            <li class="house">
-              <strong>Adresse :</strong>59700 Marcq-en-Baroeul
-            </li>
-          </ul>
-
-          <div id="expsup"></div>
-          <p>
-            "Suivant actuellement la formation de développeur web JavaScript et
-            React.Js de la Wild Code School de Lille, je suis disponible à
-            partir de Septembre pour un stage d'une durée de 4 mois."
-          </p>
-        </div>
-      </div>
-
-      <!-- <p><a href="./pdf/cv.pdf">En version PDF</a></p> -->
-      <div id="exp" class="categories liste">
-        <h1>Expérience</h1>
-        <ul>
-          <li>
-            <strong
-            >2016-2018 Gérant de Alfa-Services</strong
-            ><br />
-            Entreprise de formations techniques à destination des professionnels.
-          </li>
-          <li>
-            <strong
-            >2011-2015 Webmaster Trenois Decamps</strong
-            ><br />
-            Entré en tant que assistant PAO, j'ai ensuite créé une service web pour le site trenois.com, puis j'ai créé un site elearning en intranet.
-          </li>
-
-          <div id="formationSup"></div>
-
-          <li>
-            <strong
-            >2013-2017</strong
-            ><br />
-            Co-délégué régional de Nous Citoyens pour la région Haut-de-France et correspondant presse.  
-          </li>
         </ul>
       </div>
+    </nav>
+    <div id="contactsup"></div>
+    <header>
+      <img src="./pictures/banniere.jpg" class="img-fluid banniere" alt="bannière du site" />
+    </header>
 
-      <div id="formation" class="categories liste">
-        <h1>Formations</h1>
-        <ul>
-          <li>
-            <strong
-              >Développeur Web Javascript :
-              <a
-                href="https://wildcodeschool.fr/formation-developpeur-web-mobile/"
-                target="_blank"
-                title="Site de la Wild"
-                >Wild Code School </a
-              >Lille / Depuis 2019</strong
-            ><br />
-            Apprentissage de Javascript, de Node.Js et de React.Js . <br />
-            Conception de sites internets dans le cadre des projets
-            professionnels, réalisés en équipe via l'intégration des méthodes
-            agiles de gestion de projet.
-          </li>
-        </ul>
+    <!--Barre de Nav partie CV-->
+    <span id="openArrow"> </span>
+
+    <div id="mySidenav" class="sidenav">
+      <div id="closebtn">
+        &#x2716;
       </div>
 
-      <div id="info" class="categories">
-        <div id="compsup"></div>
+      <a href="#contactsup">Contact</a>
+      <a href="#contactsup">Introduction</a>
+      <a href="#expsup">Expériences</a>
+      <a href="#formationSup">Formations</a>
+      <a href="#infosup">Informatique</a>
+      <a href="#compsup">Compétences</a>
+      <a href="#atoutssup">Atouts</a>
+      <a href="#intersup">Centres d'intérêts</a>
+    </div>
 
-        <h1>Compétences techniques</h1>
+    <div class="row entete">
+      <div class="col-3">
+        <a href="https://www.linkedin.com/in/louis-allard-devweb/" title="Mon profil LikedIn" target="_blank"><img
+            src="pictures/moi.jpg" class="photo" alt="Ma photo" /></a>
+      </div>
+      <div class="col contactIntro">
+        <ul>
+          <li class="mail">
+            <strong>Email :</strong><a href="mailto:la.dewweb@yahoo.com">
+              la.dewweb@yahoo.com</a>
+          </li>
+          <li class="house">
+            <strong>Adresse :</strong>59700 Marcq-en-Baroeul
+          </li>
+        </ul>
 
-        <div class="row langages">
-          <figure class="text-hide">
-            <img src="./pictures/linux.png" alt="Linux logo" />
-            <figcaption>Linux</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/git.png" alt="Git logo" />
-            <figcaption>Git</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/html.svg" alt="Html logo" />
-            <figcaption>HTML 5</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/css.svg" alt="Css logo" />
-            <figcaption class="css_text">CSS 3</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/bootstrap.svg" alt="Bootstrap logo" />
-            <figcaption>Bootstrap</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/js.svg" alt="Js logo" />
-            <figcaption>JavaScript</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/mysql.png" alt="Mysql logo" />
-            <figcaption>MySql</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/node.svg" alt="Node logo" />
-            <figcaption>Node.Js.</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/reactjs.svg" alt="ReactJs logo" />
-            <figcaption>React.Js.</figcaption>
-          </figure>
-          <figure class="text-hide">
-            <img src="./pictures/photoshop.png" alt="Photoshop logo" />
-            <figcaption>Photoshop</figcaption>
-          </figure>
-        </div>
+        <div id="expsup"></div>
+        <p>
+          "Suivant actuellement la formation de développeur web JavaScript et
+          React.Js de la Wild Code School de Lille, je suis disponible à
+          partir de Septembre pour un stage d'une durée de 4 mois."
+        </p>
+      </div>
+    </div>
+
+    <!-- <p><a href="./pdf/cv.pdf">En version PDF</a></p> -->
+    <div id="exp" class="categories liste">
+      <h1>Expérience</h1>
+      <ul>
+        <li>
+          <strong>2016-2018 Gérant de Alfa-Services</strong><br />
+          Entreprise de formations techniques à destination des professionnels.
+        </li>
+        <li>
+          <strong>2011-2015 Webmaster Trenois Decamps</strong><br />
+          Entré en tant que assistant PAO, j'ai ensuite créé une service web pour le site trenois.com, puis j'ai créé un
+          site elearning en intranet.
+        </li>
+
+        <li>
+          <strong>2013-2017</strong><br />
+          Co-délégué régional de Nous Citoyens pour la région Haut-de-France et correspondant presse.
+        </li>
+
+        <li>
+          <strong>2000-2012 Cours et dépannage Informatique</strong><br />
+          Cours d'informatique, à domicile, à l'intention des seniors et dépannage chez les particuliers. 
+        </li>
+      </ul>
+    </div>
+
+    <div id="formation" class="categories liste">
+      <h1>Formations</h1>
+      <ul>
+        <li>
+          <strong>Développeur Web Javascript :
+            <a href="https://wildcodeschool.fr/formation-developpeur-web-mobile/" target="_blank"
+              title="Site de la Wild">Wild Code School </a>Lille / Depuis 2019</strong><br />
+          Apprentissage de Javascript, de Node.Js et de React.Js . <br />
+          Conception de sites internets dans le cadre des projets
+          professionnels, réalisés en équipe via l'intégration des méthodes
+          agiles de gestion de projet.
+        </li>
+      </ul>
+    </div>
+
+    <div id="info" class="categories">
+      <div id="compsup"></div>
+
+      <h1>Compétences techniques</h1>
+
+      <div class="row langages">
+        <figure class="text-hide">
+          <img src="./pictures/linux.png" alt="Linux logo" />
+          <figcaption>Linux</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/git.png" alt="Git logo" />
+          <figcaption>Git</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/html.svg" alt="Html logo" />
+          <figcaption>HTML 5</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/css.svg" alt="Css logo" />
+          <figcaption class="css_text">CSS 3</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/bootstrap.svg" alt="Bootstrap logo" />
+          <figcaption>Bootstrap</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/js.svg" alt="Js logo" />
+          <figcaption>JavaScript</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/mysql.png" alt="Mysql logo" />
+          <figcaption>MySql</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/node.svg" alt="Node logo" />
+          <figcaption>Node.Js.</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/reactjs.svg" alt="ReactJs logo" />
+          <figcaption>React.Js.</figcaption>
+        </figure>
+        <figure class="text-hide">
+          <img src="./pictures/photoshop.png" alt="Photoshop logo" />
+          <figcaption>Photoshop</figcaption>
+        </figure>
+      </div>
 
       <div id="inter" class="categories">
         <div id="permsup"></div>
@@ -207,51 +178,46 @@
         </ul>
       </div>
 
-        <!--Footer-->
+      <!--Footer-->
 
-    <footer class="page-footer font-small allFooter">
-      <div class="footerContainer">
-        <div class="row text-center d-flex justify-content-center pt-5 mb-3 footer">
-          <div class="col-md-6 offset-1 py-2">
-            <h6 class="text-uppercase font-weight-bold">
-              Développeur Web en formation permanente. N'hésitez pas à me contacter pour parler de vos projets.
-            </h6>
+      <footer class="page-footer font-small allFooter">
+        <div class="footerContainer">
+          <div class="row text-center d-flex justify-content-center pt-5 mb-3 footer">
+            <div class="col-md-6 offset-1 py-2">
+              <h6 class="text-uppercase font-weight-bold">
+                Développeur Web en formation permanente. N'hésitez pas à me contacter pour parler de vos projets.
+              </h6>
+            </div>
+            <div class="col">
+              Contact =>
+              <a href="https://github.com/Louis-Allard?tab=repositories" target="_blank"><img src="pictures/github.ico"
+                  alt="mon github" title="Mon GitHub" /></a>
+              <a href="https://www.linkedin.com/in/louis-allard-devweb/" target="_blank"><img class="likedin"
+                  src="./pictures/likedin.png" alt="mon LikedIn" title="Mon LinkeDin" /></a>
+              <a href="mailto:la.devweb@yahoo.com" target="_blank"><img class="contact" src="./pictures/contact.png"
+                  alt="mon Email" title="Email" /></a>
+            </div>
           </div>
-          <div class="col">
-            Contact => 
-            <a href="https://github.com/Louis-Allard?tab=repositories" target="_blank"><img src="pictures/github.ico"
-                alt="mon github" title="Mon GitHub" /></a>
-            <a href="https://www.linkedin.com/in/louis-allard-devweb/" target="_blank"><img class="likedin"
-                src="./pictures/likedin.png" alt="mon LikedIn" title="Mon LinkeDin" /></a>
-            <a href="mailto:la.devweb@yahoo.com" target="_blank"><img class="contact" src="./pictures/contact.png"
-                alt="mon Email" title="Email" /></a>
-          </div>
+          <hr class="rgba-white-light" style="margin: 0 10%;" />
         </div>
-        <hr class="rgba-white-light" style="margin: 0 10%;" />
-      </div>
-      <div class="footer-copyright text-center py-2">
-        console.log('© 2019 Copyright: Portfolio by Louis Allard');
-      </div>
-    </footer>
+        <div class="footer-copyright text-center py-2">
+          console.log('© 2019 Copyright: Portfolio by Louis Allard');
+        </div>
+      </footer>
       <div id="scrollUp">
-        <a href="#top"><img src="./pictures/to_top.png" alt="Remonter"/></a>
+        <a href="#top"><img src="./pictures/to_top.png" alt="Remonter" /></a>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="./myscript.js"></script>
-  </body>
+</body>
+
 </html>
