--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="col-9 span-1 introduction">
         <p>Bienvenue sur mon Portfolio,</p>
         <p>
-          Suite à de nombreuses années à travailler dans le monde du web, j'ai intégré la
+          Après de nombreuses années à travailler dans le monde du web, j'ai intégré la
           <a href="https://wildcodeschool.fr/formation-developpeur-web-mobile/" target="_blank" title="Site de la Wild">
             Wild Code School</a>
           de Lille afin de me professionnaliser rapidement dans cet univers.
