--- a/cv.html
+++ b/cv.html
@@ -108,9 +108,9 @@
       <h1>Formations</h1>
       <ul>
         <li>
-          <strong>Développeur Web Javascript :
+          <strong>2019 Développeur Web Javascript :
             <a href="https://wildcodeschool.fr/formation-developpeur-web-mobile/" target="_blank"
-              title="Site de la Wild">Wild Code School </a>Lille / Depuis 2019</strong><br />
+              title="Site de la Wild">Wild Code School </a> de Lille</strong><br />
           Apprentissage de Javascript, de Node.Js et de React.Js . <br />
           Conception de sites internets dans le cadre des projets
           professionnels, réalisés en équipe via l'intégration des méthodes
