--- a/cv.html
+++ b/cv.html
@@ -19,14 +19,14 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Accueil</a>
+            <a class="nav-link active" href="./index.html">Accueil<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./cv.html">Mon C.V <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./cv.html">Mon C.V </a>
           </li>
-          <!-- <li class="nav-item">
-              <a class="nav-link" href="./blog.html">Blog</a>
-            </li> -->
+           <li class="nav-item">
+            <a class="nav-link" href="./blog.html">Mes projets</a>
+          </li> 
         </ul>
       </div>
     </nav>
