--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./cv.html">Mon C.V </a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="./blog.html">Blog</a>
-          </li> -->
+           <li class="nav-item">
+            <a class="nav-link" href="./blog.html">Mes projets</a>
+          </li> 
         </ul>
       </div>
     </nav>
