consol on the footer, on italic font and minor fix on navbar.

--- a/cv.html
+++ b/cv.html
@@ -19,10 +19,10 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="./index.html">Accueil<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Accueil<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cv.html">Mon C.V </a>
+            <a class="nav-link active" href="./cv.html">Mon C.V </a>
           </li>
            <li class="nav-item">
             <a class="nav-link" href="./blog.html">Mes projets</a>
@@ -201,7 +201,7 @@
           <hr class="rgba-white-light" style="margin: 0 10%;" />
         </div>
         <div class="footer-copyright text-center py-2">
-          console.log('© 2019 Copyright: Portfolio by Louis Allard');
+          <i>console.log('© 2019 Copyright: Portfolio by Louis Allard');</i>
         </div>
       </footer>
       <div id="scrollUp">
