--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <hr class="rgba-white-light" style="margin: 0 10%;" />
       </div>
       <div class="footer-copyright text-center py-2">
-        console.log('© 2019 Copyright: Portfolio by Louis Allard');
+        <i>console.log('© 2019 Copyright: Portfolio by Louis Allard');</i>s
       </div>
     </footer>
   </div>
