--- a/blog.html
+++ b/blog.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="./index.html">Accueil<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./index.html">Accueil<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./cv.html">Mon C.V </a>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="./blog.html">Mes projets</a>
+              <a class="nav-link active" href="./blog.html">Mes projets</a>
             </li> 
           </ul>
         </div>
@@ -132,7 +132,7 @@
           <hr class="rgba-white-light" style="margin: 0 10%;" />
         </div>
         <div class="footer-copyright text-center py-2">
-          console.log('© 2019 Copyright: Portfolio by Louis Allard');
+          <i>console.log('© 2019 Copyright: Portfolio by Louis Allard');</i>
         </div>
       </footer>
       <div id="scrollUp">
