--- a/cv.html
+++ b/cv.html
@@ -71,7 +71,7 @@
 
         <div id="expsup"></div>
         <p>
-          "Suivant actuellement la formation de développeur web JavaScript et
+          "Actuellement en formation de développeur web JavaScript et
           React.Js de la Wild Code School de Lille, je suis disponible à
           partir de Septembre pour un stage d'une durée de 4 mois."
         </p>
@@ -88,18 +88,17 @@
         </li>
         <li>
           <strong>2011-2015 Webmaster Trenois Decamps</strong><br />
-          Entré en tant que assistant PAO, j'ai ensuite créé une service web pour le site trenois.com, puis j'ai créé un
-          site elearning en intranet.
+          Entré en tant que assistant PAO, j'ai ensuite créé une service web pour le site trenois.com, puis un site elearning en intranet.
         </li>
 
         <li>
           <strong>2013-2017</strong><br />
-          Co-délégué régional de Nous Citoyens pour la région Haut-de-France et correspondant presse.
+          Co-délégué régional pour un movement d'initiative citoyenne, dans la région Haut-de-France et correspondant presse.
         </li>
 
         <li>
           <strong>2000-2012 Cours et dépannage Informatique</strong><br />
-          Cours d'informatique, à domicile, à l'intention des seniors et dépannage chez les particuliers. 
+          Cours d'informatique à domicile, à l'intention des seniors et dépannage chez les particuliers. 
         </li>
       </ul>
     </div>
