minor change on cv.html and update banniere.jpg.

--- a/cv.html
+++ b/cv.html
@@ -80,7 +80,7 @@
 
     <!-- <p><a href="./pdf/cv.pdf">En version PDF</a></p> -->
     <div id="exp" class="categories liste">
-      <h1>Expérience</h1>
+      <h1>Expériences</h1>
       <ul>
         <li>
           <strong>2016-2018 Gérant de Alfa-Services</strong><br />
