--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row text-center d-flex justify-content-center pt-5 mb-3 footer">
           <div class="col-md-6 offset-1 py-2">
             <h6 class="text-uppercase font-weight-bold">
-              Développeur Web en formation permanente. N'hésitez pas à me contacter pour parler de vos projets.
+              Développeur Web en formation permanente. N'hésitez pas à me contacter pour discuter de vos projets.
             </h6>
           </div>
           <div class="col">
