minor fix on index.html.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <hr class="rgba-white-light" style="margin: 0 10%;" />
       </div>
       <div class="footer-copyright text-center py-2">
-        <i>console.log('© 2019 Copyright: Portfolio by Louis Allard');</i>s
+        <i>console.log('© 2019 Copyright: Portfolio by Louis Allard');</i>
       </div>
     </footer>
   </div>
