Named Delien on README, udpdated text on cv.html, minor orthografe fix on index.html.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             Wild Code School</a>
           de Lille afin de me perfectionner dans le developpement, en JavaScript et React.JS.
         </p>
-        <p>Conscient des apports du developpement web dans les domaines les plus innovants, je souhaiterais m'investir dans des projets me permettant de rester au coeur de l'actualité de mon métier.</p>
-        <p>
+        <p>Conscient des apports du developpement web dans les domaines les plus innovants, je souhaiterais m'investir dans une équipe dynamique et enthousiasmante, pour des projets me permettant de rester au coeur de l'actualité de mon métier.
+        </p>
           Vous trouverez mon cv en cliquant juste ici :
           <a href="cv.html" target="_parent"> 
               <img src="./pictures/cv.jpg" alt="Mon cv" title="Aller voir mon cv"/>
