Adding new <li>.

--- a/cv.html
+++ b/cv.html
@@ -158,6 +158,7 @@
           <li>Voyages</li>
           <li>Littérature</li>
           <li>Musique</li>
+          <li>Informatique</li>
         </ul>
       </div>
 
