Add PongGame to blog page.

--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,29 @@
       </header>
 
       <div class="card mb-3">
+        <a href="https://kind-borg-d58179.netlify.com" target="_blank"
+          ><img
+            class="card-img-top"
+            src="./pictures/pong.png"
+            alt="Watcha"
+            title="cliquer pour accéder"
+        /></a>
+        <div class="card-body">
+          <h5 class="card-title">PongGame</h5>
+          <p class="card-text">
+            Petit projet personnel réalisé en quelques heures. Un classique du jeux vidéo, commercialisé la première fois en 1972, il fut l'un des premier jeux vidéos Arcade commercialisé. <a href="https://fr.wikipedia.org/wiki/Allan_Alcorn" target="_blank">Allan Alcorn</a> est le développeur.
+          <p>Le fonctionnement est assez basique, mais il permet d'analyser le fonctionnement de la librairie CANVAS.</p>
+          <p class="card-text">
+            Pong a été développé en JavaScript avec la librairie CANVAS.
+          </p>
+          <p class="card-text">
+            <small class="text-muted"><a href="https://kind-borg-d58179.netlify.com" target="_blank"
+              >Accéder au site</a></small>
+          </p>
+        </div>
+      </div>
+
+      <div class="card mb-3">
         <a href="https://upbeat-lumiere-02bb22.netlify.com/" target="_blank"
           ><img
             class="card-img-top"
