Minor Fix on blog.html.

--- a/blog.html
+++ b/blog.html
@@ -101,9 +101,9 @@
             title="Cliquer pour accéder"
         /></a>
         <div class="card-body">
-          <h5 class="card-title">Mon premier hackathon</h5>
+          <h5 class="card-title">EasterEggFight</h5>
           <p class="card-text">
-            Pour mon premier hackathon, j'ai réalisé ce jeu de carte. Sur une durée de 24h, moi et mon équipe avons obtenir ce résultat, alors que 1 mois auparavant nous n'avions presque jamais touché à une ligne de code.
+            EasterEggFight est le projet de mon premier hackathon, j'ai réalisé ce jeu de carte. Sur une durée de 24h, moi et mon équipe avons obtenir ce résultat, alors que 1 mois auparavant nous n'avions presque jamais touché à une ligne de code.
           </p>
           <p>Cette application a été réalisé en JavaScript avec React.JS</p>
           <p class="card-text">
